# aRandomPlatformer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  platformer
src/: CMakeLists.txt  Makefile  TODO.md  aRandomPlatformer  cmake_install.cmake  consts.hpp  header.hpp  main.cpp  player.cpp  player.hpp  player_jump.cpp  terrain.cpp  terrain.hpp
